rhdlc/test/compile-fail/multiple-definition-struct-fn-mod/top.rhdl
struct b {}
fn b() {}
mod b {}
